force-app/main/default/objects/tdc_tsw__VoiceTemplate__c/fields/tdc_tsw__Document_ID__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Document_ID__c</fullName>
    <label>Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>