force-app/main/default/objects/tdc_tsw__VoiceTemplate__c/fields/tdc_tsw__Duration__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Duration__c</fullName>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>