force-app/main/default/objects/tdc_tsw__VoiceTemplate__c/fields/tdc_tsw__Play_Recording__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Play_Recording__c</fullName>
    <formula>IF(NOT(ISBLANK( tdc_tsw__Document_ID__c )), HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos;+ tdc_tsw__Document_ID__c , &quot;Play&quot;,&apos;_blank&apos;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Play Recording</label>
    <type>Text</type>
</CustomField>