force-app/main/default/objects/tdc_tsw__VoiceTemplate__c/fields/tdc_tsw__Recoding_Play_Url__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Recoding_Play_Url__c</fullName>
    <formula>IF(NOT(ISBLANK( tdc_tsw__Document_ID__c )), LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;servlet/servlet.FileDownload?file=&apos;+ tdc_tsw__Document_ID__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recoding Play Url</label>
    <type>Text</type>
</CustomField>