force-app/main/default/objects/tdc_tsw__VoiceTemplate__c/fields/tdc_tsw__Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Recording_URL__c</fullName>
    <label>Recording URL</label>
    <type>Url</type>
</CustomField>